--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -22,8 +22,14 @@
                         "NumberOfAZs",
                         "VPCCIDR",
                         "PublicSubnet1CIDR",
+                        "PrivateSubnet1ACIDR",
+                        "PrivateSubnet1BCIDR",
                         "PublicSubnet2CIDR",
+                        "PrivateSubnet2ACIDR",
+                        "PrivateSubnet2BCIDR",
                         "PublicSubnet3CIDR",
+                        "PrivateSubnet3ACIDR",
+                        "PrivateSubnet3BCIDR",
                         "RemoteAccessCIDR",
                         "SSHAccessCIDR"
                     ]
@@ -107,11 +113,29 @@
                 "PublicSubnet1CIDR": {
                     "default": "Public Subnet 1 CIDR"
                 },
+                "PrivateSubnet1ACIDR": {
+                    "default": "Private Subnet 1A CIDR"
+                },
+                "PrivateSubnet1BCIDR": {
+                    "default": "Private Subnet 1B CIDR"
+                },
                 "PublicSubnet2CIDR": {
                     "default": "Public Subnet 2 CIDR"
                 },
+                "PrivateSubnet2ACIDR": {
+                    "default": "Private Subnet 2A CIDR"
+                },
+                "PrivateSubnet2BCIDR": {
+                    "default": "Private Subnet 2B CIDR"
+                },
                 "PublicSubnet3CIDR": {
                     "default": "Public Subnet 3 CIDR"
+                },
+                "PrivateSubnet3ACIDR": {
+                    "default": "Public Subnet 1 CIDR"
+                },
+                "PrivateSubnet3BCIDR": {
+                    "default": "Public Subnet 1 CIDR"
                 },
                 "RemoteAccessCIDR": {
                     "default": "Allowed External Access CIDR"
@@ -198,22 +222,64 @@
         "PublicSubnet1CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.128.0/25",
+            "Default": "10.0.128.0/26",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Type": "String"
+        },
+        "PrivateSubnet1ACIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.128.64/26",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Type": "String"
+        },
+        "PrivateSubnet1BCIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.128.128/25",
             "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "PublicSubnet2CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.129.0/25",
+            "Default": "10.0.129.0/26",
             "Description": "CIDR Block for the bootstrap subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
+        "PrivateSubnet2ACIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.129.64/26",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Type": "String"
+        },
+        "PrivateSubnet2BCIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.129.128/25",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Type": "String"
+        },       
         "PublicSubnet3CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.130.0/25",
+            "Default": "10.0.130.0/26",
             "Description": "CIDR Block for the bootstrap subnet 3 located in Availability Zone 3",
+            "Type": "String"
+        },
+        "PrivateSubnet3ACIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.130.64/26",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Type": "String"
+        },
+        "PrivateSubnet3BCIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.130.128/25",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "RemoteAccessCIDR": {
@@ -300,12 +366,6 @@
         }
     }, 
     "Resources": {
-        "CloudFormationLogs": {
-        "Type": "AWS::Logs::LogGroup",
-        "Properties": {
-            "RetentionInDays": 7
-        }
-        },
         "VPCStack": {
             "Type": "AWS::CloudFormation::Stack",
             "DeletionPolicy": "Retain",
@@ -333,7 +393,7 @@
                             }
                         ]
                     },
-                    "CreatePrivateSubnets": "false",
+                    "CreatePrivateSubnets": "true",
                     "KeyPairName": {
                         "Ref": "KeyPairName"
                     },
@@ -343,11 +403,29 @@
                     "PublicSubnet1CIDR": {
                         "Ref": "PublicSubnet1CIDR"
                     },
+                    "PrivateSubnet1ACIDR": {
+                        "Ref": "PrivateSubnet1ACIDR"
+                    },
+                    "PrivateSubnet1BCIDR": {
+                        "Ref": "PrivateSubnet1BCIDR"
+                    },
                     "PublicSubnet2CIDR": {
                         "Ref": "PublicSubnet2CIDR"
                     },
+                    "PrivateSubnet2ACIDR": {
+                        "Ref": "PrivateSubnet2ACIDR"
+                    },
+                    "PrivateSubnet2BCIDR": {
+                        "Ref": "PrivateSubnet2BCIDR"
+                    },
                     "PublicSubnet3CIDR": {
                         "Ref": "PublicSubnet3CIDR"
+                    },
+                    "PrivateSubnet3ACIDR": {
+                        "Ref": "PrivateSubnet3ACIDR"
+                    },
+                    "PrivateSubnet3BCIDR": {
+                        "Ref": "PrivateSubnet3BCIDR"
                     },
                     "VPCCIDR": {
                         "Ref": "VPCCIDR"
@@ -355,8 +433,76 @@
                 }
             }
         },
+        "BastionStack": {
+            "Type": "AWS::CloudFormation::Stack",
+            "DeletionPolicy": "Retain",
+            "DependsOn": [
+                "VPCStack"
+            ],
+            "Properties": {
+                "TemplateURL": {
+                    "Fn::Sub": [
+                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/submodules/quickstart-linux-bastion/templates/linux-bastion.template",
+                        {
+                            "QSS3Region": {
+                                "Fn::If": [
+                                    "GovCloudCondition",
+                                    "s3-us-gov-west-1",
+                                    "s3"
+                                ]
+                            }
+                        }
+                    ]
+                },
+                "Parameters": {
+                    "BastionInstanceType": "t2.micro",
+                    "BastionAMIOS": "Amazon-Linux-HVM",
+                    "BastionBanner": {
+                    "Fn::Sub": [
+                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/scripts/solace-banner.txt",
+                        {
+                            "QSS3Region": {
+                                "Fn::If": [
+                                    "GovCloudCondition",
+                                    "s3-us-gov-west-1",
+                                    "s3"
+                                ]
+                            }
+                        }
+                    ]
+                    },
+                    "NumBastionHosts": "2",
+                    "KeyPairName": {
+                        "Ref": "KeyPairName"
+                    },
+                    "PublicSubnet1ID": {
+                        "Fn::GetAtt": [
+                            "VPCStack",
+                            "Outputs.PublicSubnet1ID"
+                        ]
+                    },
+                    "PublicSubnet2ID": {
+                        "Fn::GetAtt": [
+                            "VPCStack",
+                            "Outputs.PublicSubnet2ID"
+                        ]
+                    },
+                    "RemoteAccessCIDR" :{
+                        "Ref": "SSHAccessCIDR"
+                    },
+                    "VPCID": {
+                        "Fn::GetAtt": [
+                            "VPCStack",
+                            "Outputs.VPCID"
+                        ]
+                    }
+                }
+            }
+        },
         "SolaceStack": {
-            "DependsOn": "VPCStack",
+            "DependsOn": [
+                "VPCStack"
+            ],
             "Type": "AWS::CloudFormation::Stack",
             "DeletionPolicy": "Retain",
             "Properties": {
@@ -436,19 +582,19 @@
                                         {
                                             "Fn::GetAtt": [
                                                 "VPCStack",
-                                                "Outputs.PublicSubnet1ID"
+                                                "Outputs.PrivateSubnet1AID"
                                             ]
                                         },
                                         {
                                             "Fn::GetAtt": [
                                                 "VPCStack",
-                                                "Outputs.PublicSubnet2ID"
+                                                "Outputs.PrivateSubnet2AID"
                                             ]
                                         },
                                         {
                                             "Fn::GetAtt": [
                                                 "VPCStack",
-                                                "Outputs.PublicSubnet3ID"
+                                                "Outputs.PrivateSubnet3AID"
                                             ]
                                         }
                                     ]
@@ -461,19 +607,19 @@
                                         {
                                             "Fn::GetAtt": [
                                                 "VPCStack",
-                                                "Outputs.PublicSubnet1ID"
+                                                "Outputs.PrivateSubnet1AID"
                                             ]
                                         },
                                         {
                                             "Fn::GetAtt": [
                                                 "VPCStack",
-                                                "Outputs.PublicSubnet2ID"
+                                                "Outputs.PrivateSubnet2AID"
                                             ]
                                         },
                                         {
                                             "Fn::GetAtt": [
                                                 "VPCStack",
-                                                "Outputs.PublicSubnet2ID"
+                                                "Outputs.PrivateSubnet2AID"
                                             ]
                                         }
                                     ]
