--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -23,7 +23,8 @@
                         "VPCCIDR",
                         "NumberOfAZs",
                         "RemoteAccessCIDR",
-                        "SSHAccessCIDR"
+                        "SSHAccessCIDR",
+                        "UsePrivateSubnets"
                     ]
                 },
                 {
@@ -113,6 +114,9 @@
                 },
                 "SSHAccessCIDR": {
                     "default": "Allowed SSH Access CIDR"
+                },
+                "UsePrivateSubnets": {
+                    "default": "Relay on mgmt security group of Bastion"
                 },
                 "VPCID": {
                     "default": "VPC CIDR"
@@ -237,6 +241,15 @@
             "Description": "Allowed CIDR block for SSH access to cluster nodes",
             "Type": "String"
         },
+        "UsePrivateSubnets": {
+            "AllowedValues": [
+                "true",
+                "false"
+            ],
+            "Default": "true",
+            "Description": "Whether to use Private Subnets with fronting Bastion Servers",
+            "Type": "String"
+        },
         "SubnetID": {
             "Description": "Comma separated list of VPC subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Solace cluster access (internal and external)",
             "Type": "List<AWS::EC2::Subnet::Id>"
@@ -331,6 +344,22 @@
             "Fn::Equals": [
                 {"Ref": "NumberOfAZs"},
                 "3"
+            ]
+        },
+        "UsePrivateSubnetsConditions": {
+            "Fn::Equals": [
+                {
+                    "Ref": "UsePrivateSubnets"
+                },
+                "true"
+            ]
+        },
+        "UsePublicSubnetsConditions": {
+            "Fn::Equals": [
+                {
+                    "Ref": "UsePrivateSubnets"
+                },
+                "false"
             ]
         },
         "GovCloudCondition": {
@@ -598,56 +627,98 @@
                     "Ref": "VPCID"
                 },
                 "GroupDescription": "Message Router Security Group",
+                
                 "SecurityGroupIngress": [
                     {
                         "IpProtocol": "tcp",
                         "FromPort": "8741",
                         "ToPort": "8741",
-                        "CidrIp": {
-                            "Ref": "VPCCIDR"
-                        }
+                        "CidrIp": { "Ref" : "VPCCIDR" }
                     },
                     {
                         "IpProtocol": "udp",
                         "FromPort": "5404",
                         "ToPort": "5405",
-                        "CidrIp": {
-                            "Ref": "VPCCIDR"
-                        }
-                    },
-                    {
-                        "IpProtocol": "tcp",
-                        "FromPort": "1883",
-                        "ToPort": "1883",
-                        "CidrIp": {
-                            "Ref": "RemoteAccessCIDR"
-                        }
-                    },
-                    {
-                        "IpProtocol": "tcp",
-                        "FromPort": "55555",
-                        "ToPort": "55555",
-                        "CidrIp": {
-                            "Ref": "RemoteAccessCIDR"
-                        }
-                    },
-                    {
-                        "IpProtocol": "tcp",
-                        "FromPort": "22",
-                        "ToPort": "22",
-                        "CidrIp": {
-                            "Ref": "SSHAccessCIDR"
-                        }
-                    },
-                    {
-                        "IpProtocol": "tcp",
-                        "FromPort": "8080",
-                        "ToPort": "8080",
-                        "CidrIp": {
-                            "Ref": "SSHAccessCIDR"
-                        }
+                        "CidrIp": { "Ref": "VPCCIDR" }
                     }
                 ]
+            }
+        },
+        "MessageRouterSMFSecurityRulePublic": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePublicSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "55555",
+                "ToPort": "55555",
+                "CidrIp": { "Ref": "RemoteAccessCIDR" }
+            }
+        },
+        "MessageRouterSMFSecurityRulePrivate": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePrivateSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "55555",
+                "ToPort": "55555",
+                "CidrIp": { "Ref": "VPCCIDR" }
+            }
+        },
+        "MessageRouterMQTTSecurityRulePublic": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePublicSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "1883",
+                "ToPort": "1883",
+                "CidrIp": { "Ref": "RemoteAccessCIDR" }
+            }
+        },
+        "MessageRouterMQTTSecurityRulePrivate": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePrivateSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "1883",
+                "ToPort": "1883",
+                "CidrIp": { "Ref": "VPCCIDR" }
+            }
+        },
+        "MessageRouterSSHSecurityRulePublic": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePublicSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "22",
+                "ToPort": "22",
+                "CidrIp": { "Ref": "SSHAccessCIDR" }
+            }
+        },
+        "MessageRouterSSHSecurityRulePrivate": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePrivateSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "22",
+                "ToPort": "22",
+                "CidrIp": { "Ref": "VPCCIDR" }
+            }
+        },
+        "MessageRouterSEMPSecurityRulePublic": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePublicSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MessageRouterSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "8080",
+                "ToPort": "8080",
+                "CidrIp": { "Ref": "SSHAccessCIDR" }
             }
         },
         "MonitorSecurityGroup": {
@@ -665,16 +736,30 @@
                         "CidrIp": {
                             "Ref": "VPCCIDR"
                         }
-                    },
-                    {
-                        "IpProtocol": "tcp",
-                        "FromPort": "22",
-                        "ToPort": "22",
-                        "CidrIp": {
-                            "Ref": "SSHAccessCIDR"
-                        }
                     }
                 ]
+            }
+        },
+        "MonitorSSHSecurityRulePublic": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePublicSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MonitorSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "22",
+                "ToPort": "22",
+                "CidrIp": { "Ref": "SSHAccessCIDR" }
+            }
+        },
+        "MonitorSSHSecurityRulePrivate": {
+            "Type" : "AWS::EC2::SecurityGroupIngress",
+            "Condition": "UsePrivateSubnetsConditions",
+            "Properties": {
+                "GroupId": { "Ref": "MonitorSecurityGroup" },
+                "IpProtocol": "tcp",
+                "FromPort": "22",
+                "ToPort": "22",
+                "CidrIp": { "Ref": "VPCCIDR" }
             }
         },
         "ClusterInfoHandle": {
@@ -691,6 +776,52 @@
                 "Timeout": "120",
                 "Count": "1"
             }
-        }
+        },
+        "PrimaryELB": {
+            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
+            "DependsOn": ["MessageRouterPrimaryStack"],
+            "Condition": "UsePrivateSubnetsConditions",
+            "Properties":{
+                "Instances" : [{"Fn::GetAtt": ["MessageRouterPrimaryStack","Outputs.EC2ID"]}],          
+                "Listeners" : [ 
+                    {
+                    "LoadBalancerPort" : "55555",
+                    "InstancePort" : "55555",
+                    "Protocol" : "TCP"
+                    },{
+                    "LoadBalancerPort" : "1883",
+                    "InstancePort" : "1883",
+                    "Protocol" : "TCP"                    
+                    },{               
+                    "LoadBalancerPort" : "8080",
+                    "InstancePort" : "8080",
+                    "Protocol" : "HTTP"                    
+                    } 
+                ]
+            }
+        },
+         "BackupELB": {
+            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
+            "DependsOn": ["MessageRouterBackupStack"],
+            "Condition": "UsePrivateSubnetsConditions",
+            "Properties":{
+                "Instances" : [{"Fn::GetAtt": ["MessageRouterBackupStack","Outputs.EC2ID"]}],
+                "Listeners" : [ 
+                    {
+                    "LoadBalancerPort" : "55555",
+                    "InstancePort" : "55555",
+                    "Protocol" : "TCP"
+                    },{
+                    "LoadBalancerPort" : "1883",
+                    "InstancePort" : "1883",
+                    "Protocol" : "TCP"                    
+                    },{               
+                    "LoadBalancerPort" : "8080",
+                    "InstancePort" : "8080",
+                    "Protocol" : "HTTP"                    
+                    } 
+                ]
+            }
+        }       
     }
 }
